--- a/src/index.html
+++ b/src/index.html
@@ -248,31 +248,40 @@
                 <div class="flex mt-3">
                   <img src="./images/Group 299.svg" />
                   <p class="text-center text-base">Fresh Salah Bowl</p>
-                  <p>NGN 45,000</p>
+                  <p>NGN 4,500</p>
                 </div>
               </div>
               <div class="border-b border-gray-400 mx-3"></div>
               <div class="flex gap-2">
-                <div class="flex mt-3">
-                  <img src="./images/Group 299.svg" />
-                  <p class="text-center text-base">Fresh Salah Bowl</p>
-                  <p>NGN 45,000</p>
+                <div class="flex mt-3 pl-4">
+                  <img
+                    class="rounded-full w-7 h-7"
+                    src="./images/image 4.png"
+                  />
+                  <p class="text-center text-base">Chicken Noodles</p>
+                  <p>NGN 3,500</p>
                 </div>
               </div>
               <div class="border-b border-gray-400 mx-3"></div>
               <div class="flex gap-2">
-                <div class="flex mt-3">
-                  <img src="./images/Group 299.svg" />
-                  <p class="text-center text-base">Fresh Salah Bowl</p>
-                  <p>NGN 45,000</p>
+                <div class="flex mt-3 pl-4">
+                  <img
+                    class="rounded-full w-7 h-7"
+                    src="./images/image 6.png"
+                  />
+                  <p class="text-center text-base">Smoothie Fruits</p>
+                  <p>NGN 7,500</p>
                 </div>
               </div>
               <div class="border-b border-gray-400 mx-3"></div>
               <div class="flex gap-2">
-                <div class="flex mt-3">
-                  <img src="./images/Group 299.svg" />
-                  <p class="text-center text-base">Fresh Salah Bowl</p>
-                  <p>NGN 45,000</p>
+                <div class="flex mt-3 pl-4">
+                  <img
+                    class="rounded-full w-7 h-7"
+                    src="./images/image 5.png"
+                  />
+                  <p class="text-center text-base">Hot Chicken Wings</p>
+                  <p>NGN 4,500</p>
                 </div>
               </div>
               <div class="border-b border-gray-400 mx-3"></div>
@@ -280,7 +289,33 @@
           </div>
           <div class="border border-gray-500"></div>
 
-          <div class="flex-3"></div>
+          <div class="flex-3 px-3">
+            <div class="flex justify-between">
+              <p class="text-2xl font-semibold font-sans mr-9 px-5">Order</p>
+              <div class="px-5">
+                <button
+                  class="rounded-sm font-medium text-xl px-3 py-2"
+                  style="background-color: #e7eefa; color: #5a6acf"
+                >
+                  View Report
+                </button>
+              </div>
+            </div>
+            <div class="ml-6">
+              <p class="text-3xl font-semibold font-sans">2.568</p>
+              <p class="flex items-center mt-3 gap-1 text-xl text-gray-400">
+                <img class="w-4 h-4" src="./images/Arrow Down.svg" alt="" />
+                <span class="text-red-500 text-lg font-medium">2.1%</span> vs
+                last week
+              </p>
+              <p class="mt-4 text-xl text-gray-500">Sales from 1-6 January 2026</p>
+            </div>
+            <div class="ml-6 ">
+              <div class="mt-6"> <img class="absolute w-lg  px-2" src="./images/Group 43.png" alt="">
+              <img class="relative w-md top-12" src="./images/Line 35.png" alt="">
+            <img class="relative w-md  bottom-28" src="./images/Line 34.png" alt=""></div>
+            </div>
+          </div>
         </section>
       </section>
     </div>
