--- a/src/index.html
+++ b/src/index.html
@@ -24,34 +24,85 @@
           <div class="p-4 mt-2">
             <h2 class="text-gray-400 font-mono text-sm my-2">MENU</h2>
             <ul class="space-y-5 py-4 text-gray-400">
-              <li class="text-sm md:text-base gap-2 flex items-center hover:text-gray-600 cursor-pointer">
-                <img class="w-5 h-5 md:w-6 md:h-6" src="./images/dashboard.png" /> Dashboard
+              <li
+                class="text-sm md:text-base gap-2 flex items-center hover:text-gray-600 cursor-pointer"
+              >
+                <img
+                  class="w-5 h-5 md:w-6 md:h-6"
+                  src="./images/dashboard.png"
+                />
+                Dashboard
               </li>
-              <li class="text-sm md:text-base gap-2 flex items-center hover:text-gray-600 cursor-pointer">
-                <img class="w-5 h-5 md:w-6 md:h-6" src="./images/Buy.svg" alt="" />Food Order
+              <li
+                class="text-sm md:text-base gap-2 flex items-center hover:text-gray-600 cursor-pointer"
+              >
+                <img
+                  class="w-5 h-5 md:w-6 md:h-6"
+                  src="./images/Buy.svg"
+                  alt=""
+                />Food Order
               </li>
-              <li class="text-sm md:text-base gap-2 flex items-center hover:text-gray-600 cursor-pointer">
-                <img class="w-5 h-5 md:w-6 md:h-6" src="./images/Document.png" alt="" />Manage Menu
+              <li
+                class="text-sm md:text-base gap-2 flex items-center hover:text-gray-600 cursor-pointer"
+              >
+                <img
+                  class="w-5 h-5 md:w-6 md:h-6"
+                  src="./images/Document.png"
+                  alt=""
+                />Manage Menu
               </li>
-              <li class="text-sm md:text-base gap-2 flex items-center hover:text-gray-600 cursor-pointer">
-                <img class="w-5 h-5 md:w-6 md:h-6" src="./images/Chat.png" alt="" /> Customer Review
+              <li
+                class="text-sm md:text-base gap-2 flex items-center hover:text-gray-600 cursor-pointer"
+              >
+                <img
+                  class="w-5 h-5 md:w-6 md:h-6"
+                  src="./images/Chat.png"
+                  alt=""
+                />
+                Customer Review
               </li>
             </ul>
           </div>
           <div class="p-4">
             <h2 class="text-gray-400 font-mono text-sm my-2">OTHERS</h2>
             <ul class="space-y-5 py-4 text-gray-400">
-              <li class="text-sm md:text-base gap-3 flex items-center hover:text-gray-600 cursor-pointer">
-                <img class="w-5 h-5 md:w-6 md:h-6" src="./images/Setting.svg" alt="" />Settings
+              <li
+                class="text-sm md:text-base gap-3 flex items-center hover:text-gray-600 cursor-pointer"
+              >
+                <img
+                  class="w-5 h-5 md:w-6 md:h-6"
+                  src="./images/Setting.svg"
+                  alt=""
+                />Settings
               </li>
-              <li class="text-sm md:text-base gap-3 flex items-center hover:text-gray-600 cursor-pointer">
-                <img class="w-5 h-5 md:w-6 md:h-6" src="./images/Wallet.svg" alt="" />Payment
+              <li
+                class="text-sm md:text-base gap-3 flex items-center hover:text-gray-600 cursor-pointer"
+              >
+                <img
+                  class="w-5 h-5 md:w-6 md:h-6"
+                  src="./images/Wallet.svg"
+                  alt=""
+                />Payment
               </li>
-              <li class="text-sm md:text-base gap-3 flex items-center hover:text-gray-600 cursor-pointer">
-                <img class="w-5 h-5 md:w-6 md:h-6" src="./images/Profile.svg" alt="" /> Accounts
+              <li
+                class="text-sm md:text-base gap-3 flex items-center hover:text-gray-600 cursor-pointer"
+              >
+                <img
+                  class="w-5 h-5 md:w-6 md:h-6"
+                  src="./images/Profile.svg"
+                  alt=""
+                />
+                Accounts
               </li>
-              <li class="text-sm md:text-base gap-3 flex items-center hover:text-gray-600 cursor-pointer">
-                <img class="w-5 h-5 md:w-6 md:h-6" src="./images/Info Square.svg" alt="" /> Help
+              <li
+                class="text-sm md:text-base gap-3 flex items-center hover:text-gray-600 cursor-pointer"
+              >
+                <img
+                  class="w-5 h-5 md:w-6 md:h-6"
+                  src="./images/Info Square.svg"
+                  alt=""
+                />
+                Help
               </li>
             </ul>
           </div>
@@ -59,22 +110,24 @@
       </div>
 
       <!-- Main Content -->
-      <section class="flex-1 p-2 md:p-4 lg:p-6 overflow-auto ">
+      <section class="flex-1 p-2 md:p-4 lg:p-6 overflow-auto">
         <!-- Header -->
-        <div class="flex flex-col sm:flex-row items-start sm:items-center gap-3 sm:gap-0">
+        <div
+          class="flex flex-col sm:flex-row items-start sm:items-center gap-3 sm:gap-0"
+        >
           <div class="relative w-full sm:w-auto sm:flex-1">
             <input
-              class="w-full sm:w-64 md:w-80 lg:w-96 px-4 py-2 border text-gray-400/70 text-sm font-mono border-gray-300 bg-gray-400/10 rounded-sm"
+              class="w-full sm:w-64  lg:w-96 xl:w-3xl px-4 py-2 border text-gray-400/70 text-sm font-mono border-gray-300 bg-gray-400/10 rounded-sm"
               type="text"
               placeholder="Search..."
             />
             <img
-              class="absolute right-3 top-1/2 transform -translate-y-1/2 w-4 h-4"
+              class="absolute right-3 top-1/2 transform -translate-y-1/2 w-4 h-4 md:hidden"
               src="./images/Icon.svg"
               alt=""
             />
           </div>
-          <div class="flex items-center gap-2 sm:gap-3 ml-auto">
+          <div class="hidden md:flex items-center gap-2 sm:gap-3 ml-auto   ">
             <div>
               <img
                 class="w-8 h-8 p-2 rounded-full"
@@ -83,12 +136,18 @@
                 alt=""
               />
             </div>
-            <div class="hidden sm:flex items-center gap-2 font-serif text-sm md:text-base text-gray-600">
+            <div
+              class="hidden sm:flex items-center gap-2 font-serif text-sm md:text-base text-gray-600"
+            >
               Delicious Burger
-              <img class="w-5 h-5 md:w-6 md:h-6" src="./images/chevron_down.svg" alt="" />
+              <img
+                class="w-5 h-5 md:w-6 md:h-6 cursor-pointer"
+                src="./images/chevron_down.svg"
+                alt=""
+              />
             </div>
             <div>
-              <img class="w-6 h-6" src="./images/Notif Icon.svg" alt="" />
+              <img class="w-6 h-6 cursor-pointer" src="./images/Notif Icon.svg" alt="" />
             </div>
           </div>
         </div>
@@ -105,7 +164,7 @@
               <div class="flex mt-6 justify-between items-center">
                 <p class="text-sm md:text-base font-medium">Revenue</p>
                 <button
-                  class="rounded-sm font-medium text-xs md:text-sm px-3 py-1.5"
+                  class="rounded-sm font-medium text-xs md:text-sm px-3 py-1.5 cursor-pointer hover:bg-blue-950 text-white transition duration-200"
                   style="background-color: #e7eefa; color: #5a6acf"
                 >
                   View Report
@@ -113,9 +172,13 @@
               </div>
               <div class="py-5">
                 <div class="text-xl md:text-2xl font-bold">NGN 7,850,000</div>
-                <p class="flex items-center text-gray-400 font-sans text-sm md:text-base mt-3">
+                <p
+                  class="flex items-center text-gray-400 font-sans text-sm md:text-base mt-3"
+                >
                   <img class="w-4 h-4" src="./images/Arrow Up.svg" />
-                  <span class="text-green-700 font-semibold px-1 text-sm">2.1%</span>
+                  <span class="text-green-700 font-semibold px-1 text-sm"
+                    >2.1%</span
+                  >
                   vs last week
                 </p>
                 <p class="text-gray-400 text-sm md:text-base py-5">
@@ -141,7 +204,7 @@
             <div class="flex justify-between items-center">
               <p class="text-lg md:text-xl font-medium">Order Time</p>
               <button
-                class="rounded-sm font-medium text-xs md:text-sm px-3 py-1.5"
+                class="rounded-sm font-medium text-xs md:text-sm px-3 py-1.5 cursor-pointer"
                 style="background-color: #e7eefa; color: #5a6acf"
               >
                 View Report
@@ -150,16 +213,24 @@
             <p class="text-sm text-gray-400 font-mono mt-3">
               From 1-6 Jan, 2025
             </p>
-            <div class="mt-8 md:mt-12 flex items-center justify-center relative h-48 md:h-56">
-              <img class="absolute w-40 md:w-48 h-auto" src="./images/round.png" alt="" />
+            <div
+              class="mt-8 md:mt-12 flex items-center justify-center relative h-48 md:h-56"
+            >
               <img
-                class="absolute right-8 md:right-12 top-4 w-6 h-6"
+                class="absolute w-40 md:w-48 h-auto"
+                src="./images/round.png"
+                alt=""
+              />
+              <img
+                class="absolute right-6 md:right-12 top-4 lg:-right-3 xl:right-20"
                 src="./images/Info.svg"
                 alt=""
               />
             </div>
 
-            <div class="flex flex-wrap justify-center md:justify-between gap-4 md:gap-8 mt-12 md:mt-16 text-sm md:text-base text-gray-500">
+            <div
+              class="flex flex-wrap justify-center md:justify-between gap-4 md:gap-8 mt-12 md:mt-16 text-sm md:text-base text-gray-500"
+            >
               <div class="text-center">
                 <p class="flex gap-2 items-center">
                   <img src="./images/Ellipse 7.svg" alt="" /> Afternoon
@@ -183,7 +254,9 @@
         </section>
 
         <!-- Bottom Section -->
-        <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6 mt-6">
+        <section
+          class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-4 md:gap-6 mt-6"
+        >
           <!-- Your Rating Card -->
           <div class="bg-white rounded-lg shadow p-4 md:p-6">
             <div>
@@ -192,16 +265,22 @@
                 Your satisfaction is our almost Priority
               </p>
             </div>
-            <div class="flex items-center justify-center pt-8 mt-6 relative h-40 md:h-48">
-              <img class="absolute w-32 md:w-40 h-auto" src=" ./images/Chart 2.svg" alt="" />
+            <div
+              class="flex items-center justify-center pt-8 mt-6 relative h-40 md:h-48"
+            >
               <img
-                class="absolute left-4 md:left-8 top-4 w-24 md:w-32 h-auto"
+                class="absolute w-40 md:w-40 h-auto lg:w-34 ml-16"
+                src=" ./images/Chart 2.svg"
+                alt=""
+              />
+              <img
+                class="absolute left-14 md:left-5 top-4 w-24 md:w-20 h-auto"
                 src="./images/Chart  1.svg"
                 alt=""
               />
             </div>
             <img
-              class="w-32 md:w-40 h-auto mx-auto mt-2"
+              class="relative w-32 md:w-30 h-auto mx-auto -mt-9"
               src="./images/Chart 3.svg"
               alt=""
             />
@@ -210,29 +289,49 @@
           <!-- Most Ordered Food Card -->
           <div class="bg-white rounded-lg shadow p-4 md:p-6">
             <div>
-              <h1 class="text-lg md:text-xl text-center font-bold">Most Ordered Food</h1>
+              <h1 class="text-lg md:text-xl text-center font-bold">
+                Most Ordered Food
+              </h1>
               <p class="text-gray-400 text-sm md:text-base text-center py-2">
                 Your Delivery at your Doorsteps
               </p>
             </div>
             <div class="mt-4 space-y-4">
-              <div class="flex items-center gap-3 pb-3 border-b border-gray-200">
-                <img class="w-8 h-8 md:w-10 md:h-10 rounded-full" src="./images/Group 299.svg" />
+              <div
+                class="flex items-center gap-3 pb-3 border-b border-gray-200"
+              >
+                <img
+                  class="w-8 h-8 md:w-10 md:h-10 rounded-full"
+                  src="./images/Group 299.svg"
+                />
                 <p class="flex-1 text-sm md:text-base">Fresh Salah Bowl</p>
                 <p class="text-sm md:text-base font-medium">NGN 4,500</p>
               </div>
-              <div class="flex items-center gap-3 pb-3 border-b border-gray-200">
-                <img class="w-8 h-8 md:w-10 md:h-10 rounded-full" src="./images/image 4.png" />
+              <div
+                class="flex items-center gap-3 pb-3 border-b border-gray-200"
+              >
+                <img
+                  class="w-8 h-8 md:w-10 md:h-10 rounded-full"
+                  src="./images/image 4.png"
+                />
                 <p class="flex-1 text-sm md:text-base">Chicken Noodles</p>
                 <p class="text-sm md:text-base font-medium">NGN 3,500</p>
               </div>
-              <div class="flex items-center gap-3 pb-3 border-b border-gray-200">
-                <img class="w-8 h-8 md:w-10 md:h-10 rounded-full" src="./images/image 6.png" />
+              <div
+                class="flex items-center gap-3 pb-3 border-b border-gray-200"
+              >
+                <img
+                  class="w-8 h-8 md:w-10 md:h-10 rounded-full"
+                  src="./images/image 6.png"
+                />
                 <p class="flex-1 text-sm md:text-base">Smoothie Fruits</p>
                 <p class="text-sm md:text-base font-medium">NGN 7,500</p>
               </div>
               <div class="flex items-center gap-3 pb-3">
-                <img class="w-8 h-8 md:w-10 md:h-10 rounded-full" src="./images/image 5.png" />
+                <img
+                  class="w-8 h-8 md:w-10 md:h-10 rounded-full"
+                  src="./images/image 5.png"
+                />
                 <p class="flex-1 text-sm md:text-base">Hot Chicken Wings</p>
                 <p class="text-sm md:text-base font-medium">NGN 4,500</p>
               </div>
@@ -244,7 +343,7 @@
             <div class="flex justify-between items-center">
               <p class="text-lg md:text-xl font-semibold">Order</p>
               <button
-                class="rounded-sm text-xs md:text-sm px-3 py-1.5"
+                class="rounded-sm text-xs md:text-sm px-3 py-1.5 cursor-pointer"
                 style="background-color: #e7eefa; color: #5a6acf"
               >
                 View Report
@@ -252,7 +351,9 @@
             </div>
             <div class="mt-4">
               <p class="text-2xl md:text-3xl font-semibold">2,568</p>
-              <p class="flex items-center mt-3 gap-1 text-base md:text-lg text-gray-400">
+              <p
+                class="flex items-center mt-3 gap-1 text-base md:text-lg text-gray-400"
+              >
                 <img class="w-4 h-4" src="./images/Arrow Down.svg" alt="" />
                 <span class="text-red-500 font-medium">2.1%</span> vs last week
               </p>
@@ -261,14 +362,25 @@
               </p>
             </div>
             <div class="mt-6 relative h-32 md:h-40">
-              <img class="absolute w-full h-auto" src="./images/Group 43.png" alt="" />
-              <img class="absolute w-full h-auto top-4" src="./images/Line 35.png" alt="" />
-              <img class="absolute w-full h-auto top-2" src="./images/Line 34.png" alt="" />
+              <img
+                class="absolute w-full h-auto"
+                src="./images/Group 43.png"
+                alt=""
+              />
+              <img
+                class="absolute w-full h-auto top-4"
+                src="./images/Line 35.png"
+                alt=""
+              />
+              <img
+                class="absolute w-full h-auto top-2"
+                src="./images/Line 34.png"
+                alt=""
+              />
             </div>
           </div>
         </section>
       </section>
     </div>
-          
   </body>
 </html>
